--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,8 +31,8 @@ const {title} = Astro.props;
     <nav class="flex items-center justify-between p-6 lg:px-8" aria-label="Global">
       <div class="flex lg:flex-1">
         <a href="/" class="-m-1.5 p-1.5">
-          <span class="sr-only">Your Company</span>
-          <img class="h-8 w-auto" src="/logo-black.png" alt="">
+          <span class="sr-only">CryptoMondays Zurich</span>
+          <img class="h-8 w-auto" src="/assets/cryptomondays-logo.png" alt="CryptoMondays Zurich logo">
         </a>
       </div>
       <div id="openNavBar" class="flex lg:hidden">
@@ -62,8 +62,8 @@ const {title} = Astro.props;
         class="fixed inset-y-0 right-0 z-50 w-full overflow-y-auto bg-brand-pale px-6 py-6 sm:max-w-sm sm:ring-1 sm:ring-brand-soft/40">
         <div class="flex items-center justify-between">
           <a href="/" class="-m-1.5 p-1.5">
-            <span class="sr-only">Your Company</span>
-            <img class="h-8 w-auto" src="/logo-black.png" alt="">
+            <span class="sr-only">CryptoMondays Zurich</span>
+            <img class="h-8 w-auto" src="/assets/cryptomondays-logo.png" alt="CryptoMondays Zurich logo">
           </a>
           <button id="closeNavBar" type="button" class="-m-2.5 rounded-md p-2.5 text-brand-navy hover:text-brand-bold">
             <span class="sr-only">Close menu</span>
