--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -7,11 +7,11 @@ const {} = Astro.props;
 
 <div class="">
     <div class="relative isolate overflow-hidden bg-gradient-to-b from-brand-pale via-white">
-        <div class="mx-auto max-w-7xl pb-24 pt-10 sm:pb-32 lg:grid lg:grid-cols-2 lg:gap-x-8 lg:px-8 lg:py-40">
-            <div class="px-6 lg:px-0 lg:pt-4">
+        <div class="mx-auto max-w-7xl pt-20 pb-24 sm:pb-28 lg:grid lg:grid-cols-2 lg:gap-x-12 lg:px-8 lg:pt-48 lg:pb-40">
+            <div class="px-6 lg:px-0">
                 <div class="mx-auto max-w-2xl">
                     <div class="max-w-lg">
-                        <div class="mt-24 flex flex-col gap-6 sm:mt-32 sm:flex-row sm:items-center lg:mt-16">
+                        <div class="mt-8 flex flex-col gap-4 sm:mt-10 sm:flex-row sm:items-center lg:mt-12">
                             <div class="inline-flex flex-wrap items-center gap-4">
                                 <span class="rounded-full bg-brand-navy/90 px-3 py-1 text-sm font-semibold leading-6 text-white ring-1 ring-inset ring-brand-navy">Join the community</span>
                                 <a
@@ -44,12 +44,12 @@ const {} = Astro.props;
                                 </a>
                             </div>
                         </div>
-                        <h1 class="mt-10 text-4xl font-roboto tracking-tight text-brand-navy sm:text-6xl">
+                        <h1 class="mt-8 text-4xl font-roboto tracking-tight text-brand-navy sm:text-6xl">
                             Switzerland’s most active blockchain, crypto &amp; Web3 community
                         </h1>
                         <p class="mt-6 text-lg text-brand-navy/80">From local meetups to global reach! CryptoMondays Zurich connects our community through online webinars and in-person events alike.
                         </p>
-                        <div class="mt-10 flex items-center gap-x-6">
+                        <div class="mt-8 flex items-center gap-x-6">
                             <a href="#"
                                class="rounded-md border border-brand-vivid bg-brand-vivid px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm transition-colors hover:bg-brand-bold focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-brand-bold">
                                 Signup
@@ -62,12 +62,12 @@ const {} = Astro.props;
                 </div>
             </div>
 
-            <div class="mt-0 px-1 md:mx-auto md:max-w-2xl lg:mx-0 lg:mt-0 lg:pt-4 lg:w-screen relative">
+            <div class="mt-10 px-1 md:mx-auto md:max-w-2xl lg:mx-0 lg:mt-12 lg:w-screen relative">
                 <img id="image"
                      class="rounded-xl top-0 left-0 w-full h-auto opacity-0 transition-opacity duration-1000 ease-in-out"
                      src="/assets/hero-photo-1.png"
                      alt="CryptoMondays Zurich community event"/>
-                <div class="absolute top-0 right-0 rounded-bl-xl p-6 bg-brand-pale">
+                <div class="absolute top-6 right-6 rounded-bl-xl p-4 bg-brand-pale">
                     <svg class="h-2 w-2 inline fill-brand-bold mr-2" viewBox="0 0 6 6" aria-hidden="true">
                         <circle cx="3" cy="3" r="3"/>
                     </svg>
