--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,12 +27,12 @@ const {title} = Astro.props;
 
 <div class="bg-white">
   <!-- Header -->
-  <header class="absolute inset-x-0 top-0 z-50">
-    <nav class="flex items-center justify-between p-6 lg:px-8" aria-label="Global">
+  <header class="relative z-50">
+    <nav class="flex items-center justify-between px-6 py-4 lg:px-8 lg:py-6" aria-label="Global">
       <div class="flex lg:flex-1">
         <a href="/" class="-m-1.5 p-1.5">
           <span class="sr-only">CryptoMondays Zurich</span>
-          <img class="h-48 w-auto md:h-56 lg:h-64" src="/assets/cryptomondays-logo.png" alt="CryptoMondays Zurich logo">
+          <img class="h-24 w-auto md:h-40 lg:h-48" src="/assets/cryptomondays-logo.png" alt="CryptoMondays Zurich logo">
         </a>
       </div>
       <div id="openNavBar" class="flex lg:hidden">
@@ -63,7 +63,7 @@ const {title} = Astro.props;
         <div class="flex items-center justify-between">
           <a href="/" class="-m-1.5 p-1.5">
             <span class="sr-only">CryptoMondays Zurich</span>
-            <img class="h-48 w-auto md:h-56 lg:h-64" src="/assets/cryptomondays-logo.png" alt="CryptoMondays Zurich logo">
+            <img class="h-20 w-auto md:h-28 lg:h-32" src="/assets/cryptomondays-logo.png" alt="CryptoMondays Zurich logo">
           </a>
           <button id="closeNavBar" type="button" class="-m-2.5 rounded-md p-2.5 text-brand-navy hover:text-brand-bold">
             <span class="sr-only">Close menu</span>
