--- a/src/components/Testimonial.astro
+++ b/src/components/Testimonial.astro
@@ -16,15 +16,12 @@ const {} = Astro.props;
             <img class="h-12 w-auto" src="/assets/cryptomondays-logo.png" alt="CryptoMondays Zurich logo">
             <figure>
                 <blockquote class="mt-6 text-lg font-semibold text-white sm:text-xl sm:leading-8">
-                    <p>“Amet amet eget scelerisque tellus sit neque faucibus non eleifend. Integer eu praesent at a.
-                        Ornare
-                        arcu gravida natoque erat et cursus tortor consequat at. Vulputate gravida sociis enim
-                        nullam ultricies
-                        habitant malesuada lorem ac.”</p>
+                    <p>“the heart of every great community lies in balance
+                        where we give generously and receive even more in return.”</p>
                 </blockquote>
                 <figcaption class="mt-6 text-base text-white">
-                    <div class="font-semibold">Judith Black</div>
-                    <div class="mt-1">CEO of Template</div>
+                    <div class="font-semibold">Lou Kerner</div>
+                    <div class="mt-1">Founder of CryptoMondays Global</div>
                 </figcaption>
             </figure>
         </div>
